--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,9 +51,14 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion flutter.minSdkVersion
+        multiDexEnabled true
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+    }
+    dependencies {
+        def multidex_version = "2.0.1"
+        implementation "androidx.multidex:multidex:$multidex_version"
     }
 
     buildTypes {
