--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   firebase_auth: ^4.12.1
   cloud_firestore: ^4.12.2
   firebase_database: ^10.3.3
-
+  flutter_otp_text_field: ^1.1.0+2
+  google_sign_in: ^6.1.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
