--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_database: ^10.3.3
   flutter_otp_text_field: ^1.1.0+2
   google_sign_in: ^6.1.6
+  dotted_line: ^3.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
