--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.0+2
   google_sign_in: ^6.1.6
   flutter_svg: ^2.0.9
+  dotted_line: ^3.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,6 +68,27 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/background_city.svg
+  fonts:
+    - family: Ubuntu
+      fonts:
+        - asset: fonts/Ubuntu-Bold.ttf
+          weight: 700
+        - asset: fonts/Ubuntu-BoldItalic.ttf
+          style: italic
+          weight: 700
+        - asset: fonts/Ubuntu-Medium.ttf
+          weight: 500
+        - asset:  fonts/Ubuntu-MediumItalic.ttf
+          style: italic
+          weight: 500
+        - asset: fonts/Ubuntu-Light.ttf
+          weight: 300
+        - asset: fonts/Ubuntu-LightItalic.ttf
+          style: italic
+          weight: 300
+        - asset: fonts/Ubuntu-Regular.ttf
+          weight: 400
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
