--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.1.6
   flutter_svg: ^2.0.9
   dotted_line: ^3.2.2
+  flutter_svg_provider: ^1.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,7 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/background_city.svg
+    - assets/
   fonts:
     - family: Ubuntu
       fonts:
