Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,14 @@
-image: ghcr.io/cirruslabs/flutter:stable
-test_task:
-  pub_cache:
-    folder: ~/.pub-cache
-  test_script: flutter test --machine > report.json
-  always:
-    report_artifacts:
-      path: report.json
-      format: flutter
+image: ghcr.io/cirruslabs/flutter:latest
+stages:
+  - tests
+unit tests:
+  stage: tests
+  script:
+    - flutter test --coverage ./lib
+    - lcov -r coverage/lcov.info '*/__test*__/*' -o coverage/lcov_cleaned.info
+    - genhtml coverage/lcov_cleaned.info --output=coverage
+  tags:
+    - flutter
+  artifacts:
+    paths:
+      - coverage
