--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,14 @@
-# This file is a template, and might need editing before it works on your project.
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Flutter.gitlab-ci.yml
-
-code_quality:
-  stage: test
-  image: "cirrusci/flutter:1.22.5"
-  before_script:
-    - pub global activate dart_code_metrics
-    - export PATH="$PATH:$HOME/.pub-cache/bin"
+image: ghcr.io/cirruslabs/flutter:latest
+stages:
+  - tests
+unit tests:
+  stage: tests
   script:
-    - metrics lib -r codeclimate  > gl-code-quality-report.json
+    - flutter test --coverage ./lib
+    - lcov -r coverage/lcov.info '*/__test*__/*' -o coverage/lcov_cleaned.info
+    - genhtml coverage/lcov_cleaned.info --output=coverage
+  tags:
+    - flutter
   artifacts:
-    reports:
-      codequality: gl-code-quality-report.json
-
-test:
-  stage: test
-  image: "cirrusci/flutter:1.22.5"
-  before_script:
-    - pub global activate junitreport
-    - export PATH="$PATH:$HOME/.pub-cache/bin"
-  script:
-    - flutter test --machine --coverage | tojunit -o report.xml
-    - lcov --summary coverage/lcov.info
-    - genhtml coverage/lcov.info --output=coverage
-  coverage: '/lines\.*: \d+\.\d+\%/'
-  artifacts:
-    name: coverage
     paths:
-      - $CI_PROJECT_DIR/coverage
-    reports:
-      junit: report.xml
-
-deploy:
-  stage: deploy
-  script: echo "Define your deployment script!"
-  environment: production
+      - coverage
