--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
     sdk: flutter
   firebase_auth_mocks: ^0.13.0
   fake_cloud_firestore: ^2.4.3
+  google_sign_in_mocks: ^0.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
