--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^2.0.9
   dotted_line: ^3.2.2
   flutter_svg_provider: ^1.0.6
+  http: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
