--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   dotted_line: ^3.2.2
   flutter_svg_provider: ^1.0.6
   http: ^1.1.0
+  uuid: ^4.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
