--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.21.0
-  provider: ^6.0.5
   firebase_auth: ^4.12.1
   cloud_firestore: ^4.12.2
   firebase_database: ^10.3.3
@@ -46,6 +45,8 @@ dependencies:
   flutter_svg_provider: ^1.0.6
   http: ^1.1.0
   uuid: ^4.2.1
+  flutter_riverpod: ^2.4.8
+  riverpod_annotation: ^2.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -59,6 +60,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  riverpod_generator: ^2.3.8
+  build_runner: ^2.4.6
+  custom_lint: ^0.5.7
+  riverpod_lint: ^2.3.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
