--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_svg_provider: ^1.0.6
   webview_flutter_plus: ^0.3.0+2
+  flutter_facebook_auth: ^6.0.3
 
   http: ^1.1.0
   uuid: ^4.2.1
