--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   http: ^1.1.0
   uuid: ^4.2.1
   dotted_line: ^3.2.2
+  slide_to_act: ^2.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
