--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dev_dependencies:
   build_runner: ^2.4.6
   custom_lint: ^0.5.7
   riverpod_lint: ^2.3.6
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
