--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   uuid: ^4.2.1
   flutter_riverpod: ^2.4.8
   riverpod_annotation: ^2.3.2
+  go_router: ^12.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
