--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,14 @@ dependencies:
   webview_flutter_plus: ^0.3.0+2
   flutter_facebook_auth: ^6.0.3
 
-  http: ^1.1.0
+  http: ^1.1.2
   uuid: ^4.2.1
   flutter_riverpod: ^2.4.8
   riverpod_annotation: ^2.3.2
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  lottie: ^2.7.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -82,6 +86,8 @@ flutter:
   assets:
     - assets/
     - assets/Personavatar.png
+    - assets/weather_pic/
+    - assets/navbar_pic/
   fonts:
     - family: Ubuntu
       fonts:
