--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_riverpod: ^2.4.8
   riverpod_annotation: ^2.3.2
   go_router: ^12.1.1
+  slide_to_act: ^2.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
