--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   flutter_svg_provider: ^1.0.6
   webview_flutter_plus: ^0.3.0+2
   flutter_facebook_auth: ^6.0.3
-
+  intl: ^0.17.0
+  
   http: ^1.1.2
   uuid: ^4.2.1
   flutter_riverpod: ^2.4.8
