--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   
   go_router: ^12.1.1
   slide_to_act: ^2.0.2
+  flutter_stripe: ^9.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
