--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   go_router: ^12.1.1
   slide_to_act: ^2.0.2
   flutter_stripe: ^7.0.0
+  image_picker: ^1.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
