--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   slide_to_act: ^2.0.2
   flutter_stripe: ^7.0.0
   image_picker: ^1.0.4
+  firebase_storage: ^11.5.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
