--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
     - assets/weather_button_pic/
     - assets/navbar_pic/
     - assets/mainpage_pic/
+    - assets/votingbutton_pic/
   fonts:
     - family: Ubuntu
       fonts:
