--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   webview_flutter_plus: ^0.3.0+2
   flutter_facebook_auth: ^6.0.3
   intl: ^0.19.0
-  
   http: ^1.1.0
   uuid: ^4.2.1
   flutter_riverpod: ^2.4.8
@@ -53,12 +52,12 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   lottie: ^2.7.0
-  
   go_router: ^12.1.1
   slide_to_act: ^2.0.2
   flutter_stripe: ^7.0.0
   image_picker: ^1.0.4
   firebase_storage: ^11.5.5
+  provider: ^6.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
