--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.5.5
   provider: ^6.1.1
+  flutter_slidable: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
