--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   flutter_stripe: ^7.0.0
   image_picker: ^1.0.4
   firebase_storage: ^11.5.5
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
