--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,10 +55,13 @@ dependencies:
   go_router: ^12.1.1
   slide_to_act: ^2.0.2
   flutter_stripe: ^7.0.0
-  image_picker: ^1.0.4
+  image_picker: ^1.0.5
   firebase_storage: ^11.5.5
   provider: ^6.1.1
   flutter_slidable: ^3.0.1
+  google_fonts: ^6.1.0
+  location: ^5.0.3
+  google_maps_flutter: ^2.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
