--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   google_fonts: ^6.1.0
   location: ^5.0.3
   google_maps_flutter: ^2.5.0
+  dio: ^5.4.0
+  flutter_polyline_points: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
