--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,8 @@ flutter:
     - assets/navbar_pic/
     - assets/mainpage_pic/
     - assets/votingbutton_pic/
+    - assets/character_pic/
+
   fonts:
     - family: Ubuntu
       fonts:
