--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   dio: ^5.4.0
   flutter_polyline_points: ^2.0.0
   url_launcher: ^6.2.2
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
