--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   dio: ^5.4.0
   flutter_polyline_points: ^2.0.0
+  flutter_picker: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
