--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   flutter_pdfview: ^1.3.2
   path: ^1.8.3
   path_provider: ^2.1.1
+  googleapis_auth: ^1.4.1
+  
 
 
 dev_dependencies:
