--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^4.12.1
   cloud_firestore: ^4.13.5
   firebase_database: ^10.3.3
+  firebase_messaging: ^14.7.9
+  firebase_storage: ^11.5.5
   flutter_otp_text_field: ^1.1.0+2
   google_sign_in: ^6.1.6
   flutter_svg: ^2.0.9
@@ -47,8 +49,6 @@ dependencies:
   intl: ^0.18.1
   http: ^1.1.0
   uuid: ^4.2.1
-  flutter_riverpod: ^2.4.8
-  riverpod_annotation: ^2.3.2
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   lottie: ^2.7.0
@@ -56,7 +56,6 @@ dependencies:
   slide_to_act: ^2.0.2
   flutter_stripe: ^7.0.0
   image_picker: ^1.0.5
-  firebase_storage: ^11.5.5
   provider: ^6.1.1
   flutter_slidable: ^3.0.1
   google_fonts: ^6.1.0
@@ -70,6 +69,8 @@ dependencies:
   flutter_pdfview: ^1.3.2
   path: ^1.8.3
   path_provider: ^2.1.1
+  flutter_local_notifications: ^16.3.0
+
 
 
 dev_dependencies:
