--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: ghcr.io/cirruslabs/flutter:latest
 stages:
   - tests
+  - build
 unit tests:
   stage: tests
   script:
@@ -12,9 +13,15 @@ unit tests:
   artifacts:
     paths:
       - coverage
-unit build: # Build the app for the web
-  stage: tests
+build: # Build the app for android
+  stage: build
+  before_script:
+    - flutter packages get
+    - flutter clean
   script:
-    - flutter build apk --release
+    - flutter build appbundle
+  artifacts:
+    paths:
+      - build/app/outputs/apk/release/app-release.apk  
   tags:
     - docker      
