--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,39 @@ image: ghcr.io/cirruslabs/flutter:latest
 stages:
   - tests
   - build
-unit tests:
+integration_tests_android: # Run the integration tests on android
   stage: tests
+  variables:
+    apiLevel: "27"
+    target: "google_apis"
+    arch: "x86"
+    deviceName: "android_emulator"
+    deviceType: "pixel"
   script:
-    - flutter test --coverage ./lib
-    - lcov -r coverage/lcov.info '*/__test*__/*' -o coverage/lcov_cleaned.info
-    - genhtml coverage/lcov_cleaned.info --output=coverage
+    - sdkmanager "platform-tools" "platforms;android-${apiLevel}"
+    - sdkmanager --install "system-images;android-${apiLevel};${target}${arch}"
+    - sdkmanager --update
+    - echo "y" | sdkmanager --licenses
+    - sdkmanager --list
+    - echo "no" | avdmanager -v create avd --force --name "${deviceName}" --package "system-images;android-${apiLevel};${target};${arch}" --tag "${target}" --sdcard 128M --device "${deviceType}"
+    - emulator -avd "${deviceName}" -no-audio -no-window -no-snapstorage -no-snapshot -gpu swiftshader_indirect -no-boot-anim -no-accel -wipe-data -skip-adb-auth &
+    - adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done; input keyevent 82'
+    - flutter drive --target=test_driver/integraition_test_drive.dart
+      # run the integration tests
+    # with a trick that prevent the job from failing due to failure to uninstall app
+    # if you don't need this trick, you can simply run:
+    # flutter drive --driver=test_driver/integration_test.dart --target=integration_test/main.dart --flavor ${FLAVOR}
+    - set +e
+    - (flutter drive --driver=test_driver/integration_test.dart --target=integration_test/main.dart --flavor ${FLAVOR}|| true) > e2e_output.log 2>&1 | (grep -q "Failed to uninstall app" && (echo "Failed to uninstall app." && exit 0))
+    - set -e
+    - cat e2e_output.log | grep -q "Some tests failed." && (echo "Some tests failed. Exiting with error code." >&2 && exit 1)
   tags:
     - docker
   artifacts:
     paths:
-      - coverage
+      - screenshots
+      - report.json
+      - video.mp4      
 build: # Build the app for android
   stage: build
   before_script:
