Map-Icons + GoogleMapService hinzugefügt
Co-authored-by: thaibinhnguyen7@outlook.de <thaibinhnguyen7@outlook.de>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,6 +112,7 @@ flutter:
     - assets/mainpage_pic/
     - assets/votingbutton_pic/
     - assets/character_pic/
+    - assets/map_icon/
 
   fonts:
     - family: Ubuntu
