--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.1.1
   googleapis_auth: ^1.4.1
+  flutter_rating_stars: ^1.0.3+4
 
 dev_dependencies:
   flutter_test:
