--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,5 +76,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-messaging:23.3.0'
     implementation 'com.facebook.android:facebook-login:latest.release'
 }
