--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   path_provider: ^2.1.1
   googleapis_auth: ^1.4.1
   flutter_rating_stars: ^1.0.3+4
+  flip_card: ^0.7.0
 
 dev_dependencies:
   flutter_test:
