--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_rating_stars: ^1.0.3+4
   flutter_quill: ^9.2.0
   permission_handler: ^11.1.0
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
