map fast fertig, bis auf kleinigkeiten + interests page first design + firebase funktioniert da noch nicht ganz
Co-authored-by: tim <tim-carlo@users.noreply.github.com>
Co-authored-by: thaibinhnguyen7@outlook.de <thaibinhnguyen7@outlook.de>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -118,6 +118,7 @@ flutter:
     - assets/votingbutton_pic/
     - assets/character_pic/
     - assets/map_icon/
+    - assets/interests_pic/
 
   fonts:
     - family: Ubuntu
