--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   flutter_quill: ^9.2.0
   permission_handler: ^11.1.0
   font_awesome_flutter: ^10.6.0
+  cloud_functions: ^4.6.0
 
 dev_dependencies:
   flutter_test:
