--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,6 +121,7 @@ flutter:
     - assets/character_pic/
     - assets/map_icon/
     - assets/interests_pic/
+    - assets/recommend_pic/
 
   fonts:
     - family: Ubuntu
