--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,9 +82,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase_auth_mocks: ^0.13.0
-  fake_cloud_firestore: ^2.4.3
-  google_sign_in_mocks: ^0.3.0
+  flutter_launcher_icons: ^0.13.1 
+  flutter_native_splash: ^2.3.9
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -169,3 +169,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_launcher_icons:
+  android: true  
+  image_path: "assets/logo.png"
+
+flutter_native_splash:
+  background_image: "assets/startpage.png"
+
