--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   permission_handler: ^11.1.0
   font_awesome_flutter: ^10.6.0
   cloud_functions: ^4.6.0
+  image_cropper: ^5.0.1
 
 dev_dependencies:
   flutter_test:
