--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,8 @@ dependencies:
   flame: ^1.14.0
   cloud_functions: ^4.6.0
   image_cropper: ^5.0.1
+  shared_preferences: ^2.2.2
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
