--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: ghcr.io/cirruslabs/flutter:latest
 stages:
   - tests
 unit tests:
-  stage: tests
+  stage: build
   script:
     - flutter test --coverage ./lib
     - lcov -r coverage/lcov.info '*/__test*__/*' -o coverage/lcov_cleaned.info
